test/scc/pp/errors/029.a
029.t:1:14: error: missing ')' in expression